# rmds-bridge

./: .gitignore  CMakeLists.txt  README.md  RmdsBridgeConfig.cmake.in  RmdsBridgeConfigVersion.cmake.in  buildruntime.sh  buildruntime_libs_only.sh  tick42rmds_VS110.sln
PropertySheets/: Build_Defines.props  Build_Enhanced_Targets.props  Build_Targets.props  MiddlewareRelease.props  Middleware_OpenMAMA_Defines.props  Tick42_Boost.props  Tick42_ForceStdAfx.props  Tick42_ForceStdIntFix.props  Tick42_OpenMAMA.props  Tick42_Upa.props  Tick42_UpaShared.props  Winsock.props
cmake/: FindOpenMAMA.cmake  FindUpaAPI.cmake  FindUuid.cmake
docs/: Tick42-RMDS-Bridge-1.5.7-ReleaseNote.txt  Tick42-RMDS-Bridge-2.0.0-ReleaseNote.txt
mamaClient/: CMakeLists.txt  config.h.in  mamachurnc.c  mamachurnc.vcxproj  mamalistenc.c  mamalistencpp.cpp  mamaproxyc.c  mamapublisherc.c  openmamachurnc_VS110.vcxproj  openmamalistenc_VS110.vcxproj  openmamalistenc_VS110.vcxproj.filters  openmamalistencpp.vcxproj_VS110.filters  openmamalistencpp_VS110.vcxproj  openmamaproxyc_VS110.vcxproj  openmamapublisherc_VS110.vcxproj
tick42rmds/: CMakeLists.txt  ConnectionListener.h  DictionaryReply.h  RMDSBridgeImpl.h  RMDSBridgeSubscription.cpp  RMDSBridgeSubscription.h  RMDSConnectionConfig.cpp  RMDSConnectionConfig.h  RMDSFileSystem.cpp  RMDSFileSystem.h  RMDSNIPublisher.cpp  RMDSNIPublisher.h  RMDSPublisher.cpp  RMDSPublisher.h  RMDSPublisherBase.h  RMDSPublisherSource.cpp  RMDSPublisherSource.h  RMDSSource.cpp  RMDSSource.h  RMDSSources.cpp  RMDSSources.h  RMDSSubscriber.cpp  RMDSSubscriber.h  SourceDirectoryResponseListener.h  SourceDirectoryTypes.h  StatisticsLogger.cpp  StatisticsLogger.h  SubscriptionResponseListener.h  ToMamaFieldType.cpp  ToMamaFieldType.h  UPAAsMamaFieldType.cpp  UPAAsMamaFieldType.h  UPAAsMamaFieldTypeEnum.h  UPABookMessage.cpp  UPABookMessage.h  UPABridgePoster.cpp  UPABridgePoster.h  UPAConsumer.cpp  UPAConsumer.h  UPADecodeUtils.cpp  (+67 more)
tick42rmdsmsg/: CMakeLists.txt  MamaDateTimeWrapper.cpp  MamaDateTimeWrapper.h  MamaMsgWrapper.cpp  MamaMsgWrapper.h  MamaOpaqueWrapper.cpp  MamaOpaqueWrapper.h  MamaPriceWrapper.cpp  MamaPriceWrapper.h  config.h.in  resource.h  resource_enhanced.h  stdafx.cpp  stdafx.h  tick42rmdsmsg.rc  tick42rmdsmsg_VS110.vcxproj  tick42rmdsmsg_VS110.vcxproj.filters  tick42rmdsmsg_enhanced_VS110.vcxproj  tick42rmdsmsg_enhanced_VS110.vcxproj.filters  upafieldpayload.h  upamsgimpl.cpp  upamsgimpl.h  upamsgutils.cpp  upamsgutils.h  upapayload.h  upapayloadimpl.cpp  upapayloadimpl.h  upavaluetype.h
utils/: CMakeLists.txt  ReadMe.txt  Utils.vcxproj  Utils.vcxproj.filters  Utils_VS100.vcxproj  Utils_VS100.vcxproj.filters  Utils_VS110.vcxproj  Utils_VS110.vcxproj.filters
utils/PropertySheets/: utils.props
utils/utils/: HiResTime.cpp  HiResTime.h  environment.cpp  environment.h  filesystem.cpp  filesystem.h  mama.h  namespacedefines.h  os.cpp  os.h  parse.cpp  parse.h  properties.cpp  properties.h  stdafx.h  stdio_port.h  stdlib_port.h  t42log.cpp  t42log.h  thread.h  threadMonitor.cpp  threadMonitor.h  time.cpp  time.h
utils/utils/mama/: mamaDictionaryWrapper.cpp  mamaDictionaryWrapper.h  mamaFieldDescriptorWrapper.cpp  mamaFieldDescriptorWrapper.h  types.h
utils/utils/thread/: interlockedInt.h  lock.h  semaphore.h
